# SpartronicsLib

./: .gitignore  LICENSE  README.md  ThirdPartyLicenses.md  build.gradle  deploy_native.sh  settings.gradle
.github/workflows/: gradle.yml
lib/: build.gradle
lib/src/main/java/com/spartronics4915/lib/hardware/: CANCounter.java
lib/src/main/java/com/spartronics4915/lib/math/: PolynomialRegression.java
lib/src/main/java/com/spartronics4915/lib/subsystems/: SpartronicsSubsystem.java
lib/src/main/java/com/spartronics4915/lib/util/: DeltaTime.java  InterpolatingDouble.java  InterpolatingLong.java  Kinematics.java  Logger.java  TriFunction.java  Units.java
lib/src/test/java/com/spartronics4915/lib/subsystems/: TestSubsystem.java
lib/vendordeps/: REVRobotics.json
src/main/java/com/spartronics4915/lib/hardware/motors/: CANProbe.java  LazyTalonSRX.java  SensorModel.java  SpartronicsEncoder.java  SpartronicsMax.java  SpartronicsMotor.java  SpartronicsSRX.java  SpartronicsSRXFactory.java  SpartronicsSimulatedMotor.java
src/main/java/com/spartronics4915/lib/hardware/sensors/: A02IRSensor.java  A21IRSensor.java  A41IRSensor.java  A51IRSensor.java  IRSensor.java  RPLidarA1.java  SpartronicsIMU.java  T265Camera.java
src/main/java/com/spartronics4915/lib/loops/estimator/: RobotStateEstimator.java  RobotStateMap.java
src/main/java/com/spartronics4915/lib/math/: PolynomialRegression.java  Units.java  Util.java
src/main/java/com/spartronics4915/lib/math/geometry/: Displacement1d.java  ICurvature.java  IPose2d.java  IRotation2d.java  ITranslation2d.java  Pose2d.java  Pose2dWithCurvature.java  Rotation2d.java  State.java  Translation2d.java  Twist2d.java
src/main/java/com/spartronics4915/lib/math/physics/: DCMotorTransmission.java  DifferentialDrive.java  DriveCharacterization.java
src/main/java/com/spartronics4915/lib/math/spline/: QuinticHermiteSpline.java  Spline.java  SplineGenerator.java
src/main/java/com/spartronics4915/lib/math/threedim/: ReadMe.md
src/main/java/com/spartronics4915/lib/sensors/: A51IRSensor.java  IRSensor.java  T265Camera.java
src/main/java/com/spartronics4915/lib/statemachine/: CommandStateMachine.java  Loop.java  State.java  StateMachineScheduler.java
src/main/java/com/spartronics4915/lib/subsystems/: SpartronicsSubsystem.java  Subsystem.java  SubsystemManager.java
src/main/java/com/spartronics4915/lib/util/: CSVWritable.java  DeltaTime.java  Interpolable.java  InterpolatingDouble.java  InterpolatingLong.java  InterpolatingTreeMap.java  InverseInterpolable.java  Kinematics.java  Logger.java  Units.java  Util.java
src/main/native/: CMakeLists.txt  t265wrapper.cpp  t265wrapper.hpp
src/main/spnative/: CMakeLists.txt  t265wrapper.cpp  t265wrapper.hpp
src/native/: CMakeLists.txt  roborio_toolchain.cmake  t265wrapper.cpp  t265wrapper.hpp
src/native/jni/: README  README.md
src/test/java/com/spartronics4915/lib/sensors/: TestT265Camera.java
src/test/java/com/spartronics4915/lib/statemachine/: TestCommandStateMachine.java
src/test/java/com/spartronics4915/lib/subsystems/: TestSubsystem.java  TestSubsystemManager.java
vendordep/: build.gradle  config.gradle  publish.gradle
vendordep/src/main/driver/cpp/: T265Camera.cpp
vendordeps/: Phoenix.json  WPILibStateSpace.json  wpilibStateSpace.json
(+104 files in other folders)
